# Vortex-Web-Server

./: .gitignore  CMakeLists.txt  README.md
include/concurrency/: ThreadPool.hpp
include/http/: Request.hpp  Response.hpp
include/network/: EpollServer.hpp
include/utils/: Logger.hpp
public/: index.html  style.css
scripts/: benchmark.sh
src/: main.cpp
src/concurrency/: ThreadPool.cpp
src/http/: Request.cpp  Response.cpp
src/network/: EpollServer.cpp
src/utils/: Logger.cpp
tests/: test_parser.cpp  test_threadpool.cpp
